--- a/themes/sgsc/sass/_navigation.scss
+++ b/themes/sgsc/sass/_navigation.scss
@@ -38,7 +38,6 @@ a {
 	width: 100%;
 
 	ul {
-		// visibility: hidden;
 		list-style: none;
 		margin: 0;
 		padding-left: 0;
@@ -163,7 +162,6 @@ a {
     background: $orange;
     width: 80%;
 		margin: 1rem;
-    padding: 3rem;
     text-align: center;
 		border: 4px solid $orange;	
 	}
@@ -175,6 +173,8 @@ a {
 	}
 	a {
 		color: black;
+    padding: 2rem;
+		font-size: 2.1rem;
 	}
 }
 
@@ -189,28 +189,6 @@ a {
 	z-index: 200;
 	overflow: scroll;
 }
-
-// .overlay-slidedown {
-// 	visibility: hidden;
-// 	-webkit-transform: translateY(-100%);
-// 	transform: translateY(-100%);
-// 	-webkit-transition: -webkit-transform 0.4s ease-in-out, visibility 0s 0.4s;
-// 	transition: transform 0.4s ease-in-out, visibility 0s 0.4s;
-// }
-
-// .overlay-slidedown.menu-visible {
-// 	visibility: visible;
-// 	-webkit-transform: translateY(0%);
-// 	transform: translateY(0%);
-// 	-webkit-transition: -webkit-transform 0.4s ease-in-out;
-// 	transition: transform 0.4s ease-in-out;
-// }
-
-// .overlay.menu-visible {
-//   opacity: 1;
-//   visibility: visible;
-//   height: 100%;
-// }
 
 #back-button {
 	display: none;
