changed partners to board members

--- a/themes/sgsc/sass/style.scss
+++ b/themes/sgsc/sass/style.scss
@@ -69,7 +69,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "footer";
 @import "about";
 @import "about-our-team";
-@import "about-our-partners";
+@import "about-our-board";
 @import "programs";
 @import "join-us";
 @import "single-volunteer";
