--- a/themes/sgsc/sass/_single.scss
+++ b/themes/sgsc/sass/_single.scss
@@ -1,3 +1,25 @@
 /*--------------------------------------------------------------
 # Single-Page
 --------------------------------------------------------------*/
+
+.single-post .content-area {
+  display: flex;
+  justify-content: center;
+  .site-main {
+    display: flex;
+    width: 100%;
+    flex-flow: column nowrap;
+    article {
+      margin: 0;
+      header {
+        @include page-header;
+      }
+      .entry-content {
+        padding: $margin-d;
+      }
+    }
+    @media screen and (min-width: $mobile_width) {
+      width: $d_width;
+    }
+  }
+}
